--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -164,6 +164,10 @@
                                     <div>
                                         <span style="background-color: #B011FF; color: white; "><%- value %></span>
                                     </div>
+                                    <% } else if(data.estatus == 10 || data.estatus == 11) { %>
+                                    <div>
+                                        <span style="background-color: #FFC300;"><%- value %></span>
+                                    </div>
                                     <% } else { %>
                                     <div>
                                         <%- value %>
