--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -81,6 +81,7 @@
             </small>
 </h1>
 </div>
+<input type="hidden" name="idRol" id="idRol" value='@ViewBag.idRol'>
 <input type="hidden" name="tipo_registro" id="tipo_registro" value="0">
 <div class="row">
     <div class="col-md-12">
