--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -91,34 +91,37 @@
                     <div id="table-container">
                         @*-----*@
                         @(Html.DevExtreme().DataGrid<RegistroMarca>
-                            ()
-                            .ID("tabla01")
-                            .ShowBorders(true)
-                            .Scrolling(scrolling => scrolling.RowRenderingMode(GridRowRenderingMode.Virtual))
-                            .Paging(paging => paging.PageSize(10))
-                            .Pager(pager =>
-                            {
-                                pager.Visible(true);
-                                //pager.DisplayMode(GridPagerDisplayMode.Full);
-                                pager.ShowPageSizeSelector(true);
-                                pager.AllowedPageSizes(new JS("[10, 20, 50, 100]"));
-                                pager.ShowInfo(true);
-                                pager.ShowNavigationButtons(true);
-                            })
-                            .DataSource(d => d.WebApi().Controller("Tablas").LoadAction("Get").Key("id").LoadParams(new { _params = new JS("function() { return buildValidationSuggestionRequest(); }") }))
-                            .Columns(columns =>
-                            {
-                            columns.AddFor(m => m.id).CellTemplate(@<text>
+                                ()
+                                .ID("tabla01")
+                                .ShowBorders(true)
+                                .Scrolling(scrolling => scrolling.RowRenderingMode(GridRowRenderingMode.Virtual))
+                                .Paging(paging => paging.PageSize(10))
+                                .Pager(pager =>
+                                {
+                                    pager.Visible(true);
+                                    //pager.DisplayMode(GridPagerDisplayMode.Full);
+                                    pager.ShowPageSizeSelector(true);
+                                    pager.AllowedPageSizes(new JS("[10, 20, 50, 100]"));
+                                    pager.ShowInfo(true);
+                                    pager.ShowNavigationButtons(true);
+                                })
+                                .DataSource(d => d.WebApi().Controller("Tablas").LoadAction("Get").Key("id").LoadParams(new { _params = new JS("function() { return buildValidationSuggestionRequest(); }") }))
+                                .Columns(columns =>
+                                {
+                                    columns.AddFor(m => m.id).CellTemplate(@<text>
                                     <div class="row">
                                          <div class="col-md-6">
                                              @*<button type="button" class="dx-oc-link"  onclick='VerMarca(<%- value %>);' title="Ver información"><i class="fa fa-eye"></i></button>*@
                                              <a type="button" class="dx-oc-link" href="<%- data.permalink %>&desabilita=1" title="Ver Info"><i class="fa fa-eye"></i> </a>
                                          </div>
+                                        <% if(eu_lu.role.id == "8566d71d-72f0-489d-92d4-410804d82e60"){ %>
                                         <div class="col-md-6">
                                             <a type="button" class="dx-oc-link" href="<%- data.permalink %>&desabilita=0" title="Editar"><i class="fa fa-edit"></i> </a>
                                         </div>
+                                        <%}%>
                                     </div>
                                 </text>).Caption("ACCIONES").Width(150);
+
                                 @*columns.AddFor(m => m.solicitud_tipo_desc).Caption("TIPO DE SOLICITUD");*@
                                 @*columns.AddFor(m => m.solicitud_tipo_desc).CellTemplate(@<text>
                                     <% if (data.activo == false) { %>
@@ -354,7 +357,9 @@
             $("#tabla01").dxDataGrid("getDataSource").reload();
         }
         $(document).ready(function () {
-            $("#tabla01 .dx-toolbar-after").prepend("<a class='btn btn-info btn-sm' href='" + hosturl + "PI/RegistroMarca?tipo=" + tipo_solicitud + "'><i class='fa fa-plus'></i> Nuevo registro</button>");
+            if (eu_lu.role.id =="8566d71d-72f0-489d-92d4-410804d82e60") { 
+                $("#tabla01 .dx-toolbar-after").prepend("<a class='btn btn-info btn-sm' id='btnuevo' href='" + hosturl + "PI/RegistroMarca?tipo=" + tipo_solicitud + "'><i class='fa fa-plus'></i> Nuevo registro</button>");
+            }
         });
 
         setTimeout(function () {
