--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -291,6 +291,8 @@
                                             <input type="text" class="form-control input-sm" id="uu_36" autocomplete="off" readonly />
                                         </div>
                                     </div>
+                                    @*@if (@ViewBag.idRol == "8566d71d-72f0-489d-92d4-410804d82e60")
+                                    {*@
                                     <div class="col-md-3" id="uu_39_a">
                                         <div class="form-group" id="uu_39_c">
                                             <label for="uu_39">Uso</label>
@@ -303,7 +305,7 @@
                                             </select>
                                         </div>
                                     </div>
-
+                                    @*}*@
                                     <div class="col-md-3">
                                         <div class="form-group" id="notificacion_tituloc">
                                             <label>Correo de notificación de título</label>
