--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -107,7 +107,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tab04" role="tab"><i class="fa fa-file mr-1"></i> Cesiones</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" id="tabActividades">
                                 <a class="nav-link" data-toggle="tab" href="#tab05" role="tab"><i class="fa fa-calendar mr-1"></i> Actividades</a>
                             </li>
                             <li class="nav-item">
@@ -306,19 +306,19 @@
                                         </div>
                                     </div>
                                     @*}*@
-                                    <div class="col-md-3">
+                                    <div class="col-md-3" id="notificacion_titulo_a">
                                         <div class="form-group" id="notificacion_tituloc">
                                             <label>Correo de notificación de título</label>
                                             <input type="text" class="form-control input-sm" id="notificacion_titulo" autocomplete="off" />
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-md-3" id="notificacion_vencimiento_a">
                                         <div class="form-group" id="notificacion_vencimientoc">
                                             <label>Correo de notificación de vencimiento</label>
                                             <input type="text" class="form-control input-sm" id="notificacion_vencimiento" autocomplete="off" />
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-md-3" id="notificacion_estatus_a">
                                         <div class="form-group" id="notificacion_estatusc">
                                             <label>Correo de notificación de estatus</label>
                                             <input type="text" class="form-control input-sm" id="notificacion_estatus" autocomplete="off" />
@@ -361,8 +361,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr/>
-                                <div class="row">
+                                <div class="row" id="comentarios_a">
+                                    <hr/>
                                     <div class="col-md-8">
                                         <div class="form-group" style="margin:0 !important;">
                                             <label>Comentarios</label>
@@ -418,7 +418,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-md-3" id="uu_14_a">
                                         <div class="form-group" id="uu_14_c">
                                             <label for="uu_14">Despacho</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_14" autocomplete="off" style="width: 100%;">
@@ -431,7 +431,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-3">
+                                    <div class="col-md-3" id="uu_15_a">
                                         <div class="form-group" id="uu_15_c">
                                             <label for="uu_15">Corresponsal</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_15" autocomplete="off" style="width: 100%;">
@@ -493,8 +493,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr/>
-                                <div class="row">
+                                <div class="row" id="comentarios_b">
+                                    <hr/>
                                     <div class="col-md-8">
                                         <div class="form-group" style="margin:0 !important;">
                                             <label>Comentarios</label>
@@ -872,7 +872,7 @@
                                     </div>
                                 </div>
                                 <section id="renovacion_info">
-                                    <div class="row" style="">
+                                    <div class="row" style="" id="renovacion_a">
                                         <div class="col-md-3">
                                             <div class="form-group" id="uu_29_c">
                                                 <label id="uu_29_l">Solicita a la empresa instrucciones para renovar</label>
