--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -358,7 +358,7 @@
         }
         $(document).ready(function () {
             if (eu_lu.role.id =="8566d71d-72f0-489d-92d4-410804d82e60") { 
-                $("#tabla01 .dx-toolbar-after").prepend("<a class='btn btn-info btn-sm' id='btnuevo' href='" + hosturl + "PI/RegistroMarca?tipo=" + tipo_solicitud + "'><i class='fa fa-plus'></i> Nuevo registro</button>");
+                $("#tabla01 .dx-toolbar-after").prepend("<a class='btn btn-info btn-sm' href='" + hosturl + "PI/RegistroMarca?tipo=" + tipo_solicitud + "' id='btnuevo'><i class='fa fa-plus'></i> Nuevo registro</button>");
             }
         });
 
