acceso x empresa y usuario

--- a/Views/Administracion/Usuarios.cshtml
+++ b/Views/Administracion/Usuarios.cshtml
@@ -215,7 +215,7 @@
                                 </div>
                                 <div class="form-group" id="negocios">
                                     <div class="row">
-                                        @foreach (Negocio item in ViewBag.negocios)
+                                        @foreach (NegocioPI item in ViewBag.negocios)
                                         {
                                         <div class="col-md-6">
                                             <div class="form-group">
