--- a/Views/PI/AvisoComercial.cshtml
+++ b/Views/PI/AvisoComercial.cshtml
@@ -336,7 +336,8 @@
             END_DATE: END_DATE,
             USUARIO: "@ViewBag.ul.id",
             STR: "aa",
-            TIPO: "AvisoComercial"
+            TIPO: "AvisoComercial",
+            ID_USUARIO: eu_lu.id
         };
         var tipo = valReqData.TIPO;
         function buildValidationSuggestionRequest() {
