--- a/Views/PI/Marca.cshtml
+++ b/Views/PI/Marca.cshtml
@@ -340,7 +340,8 @@
             END_DATE: END_DATE,
             USUARIO: "@ViewBag.ul.id",
             STR: "aa",
-            TIPO: "Marca"
+            TIPO: "Marca",
+            ID_USUARIO: eu_lu.id
         };
         var tipo = valReqData.TIPO;
         function buildValidationSuggestionRequest() {
