--- a/Views/PI/ModeloIndustrial.cshtml
+++ b/Views/PI/ModeloIndustrial.cshtml
@@ -437,7 +437,8 @@
             END_DATE: END_DATE,
             USUARIO: "@ViewBag.ul.id",
             STR: "aa",
-            TIPO: "ModeloIndustrial"
+            TIPO: "ModeloIndustrial",
+            ID_USUARIO: eu_lu.id
         };
         var tipo = valReqData.TIPO;
         function buildValidationSuggestionRequest() {
