--- a/Views/PI/Obra.cshtml
+++ b/Views/PI/Obra.cshtml
@@ -405,7 +405,8 @@
             USUARIO: "@ViewBag.ul.id",
             STR: "aa",
             TIPO: "Obra",
-            TIPO_SOLICITUD: tipo_solicitud
+            TIPO_SOLICITUD: tipo_solicitud,
+            ID_USUARIO: eu_lu.id
         };
         var tipo = valReqData.TIPO;
         function buildValidationSuggestionRequest() {
