--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -344,7 +344,8 @@
             USUARIO: "@ViewBag.ul.id",
             STR: "aa",
             TIPO: "RegistroMarca",
-            TIPO_REGISTRO: tipo_solicitud
+            TIPO_REGISTRO: tipo_solicitud,
+            ID_USUARIO: eu_lu.id
         };
         var tipo = valReqData.TIPO;
         function buildValidationSuggestionRequest() {
