--- a/Views/PI/DisenoIndustrial.cshtml
+++ b/Views/PI/DisenoIndustrial.cshtml
@@ -438,7 +438,8 @@
             END_DATE: END_DATE,
             USUARIO: "@ViewBag.ul.id",
             STR: "aa",
-            TIPO: "DisenoIndustrial"
+            TIPO: "DisenoIndustrial",
+            ID_USUARIO: eu_lu.id
         };
         var tipo = valReqData.TIPO;
         function buildValidationSuggestionRequest() {
