--- a/Views/PI/ModeloUtilidad.cshtml
+++ b/Views/PI/ModeloUtilidad.cshtml
@@ -436,7 +436,8 @@
             END_DATE: END_DATE,
             USUARIO: "@ViewBag.ul.id",
             STR: "aa",
-            TIPO: "ModeloUtilidad"
+            TIPO: "ModeloUtilidad",
+            ID_USUARIO: eu_lu.id
         };
         var tipo = valReqData.TIPO;
         function buildValidationSuggestionRequest() {
