--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -291,7 +291,7 @@
                                             <input type="text" class="form-control input-sm" id="uu_36" autocomplete="off" readonly />
                                         </div>
                                     </div>
-                                    @*@if (@ViewBag.idRol == "8566d71d-72f0-489d-92d4-410804d82e60")
+                                    @*@if (@ViewBag.idRol == "8566d71d-72f0-489d-92d4-410804d82e60" || @ViewBag.idRol == "a78f7e2f-69af-43aa-9e41-4df768bf24b1")
                                     {*@
                                     <div class="col-md-3" id="uu_39_a">
                                         <div class="form-group" id="uu_39_c">
@@ -445,7 +445,7 @@
                                     </div>
                                 </div>
 
-                                <div class="row">
+                                <div class="row"  id="solicitud_a">
                                     <div class="col-md-12">
                                         <div class="form-group" id="solicitudt" style="margin:0 !important;">
                                             <label>Solicitud</label>
